@@ -18,6 +18,7 @@ import org.elasticsearch.xpack.esql.core.type.DataType;
 import org.elasticsearch.xpack.esql.expression.function.Example;
 import org.elasticsearch.xpack.esql.expression.function.FunctionInfo;
 import org.elasticsearch.xpack.esql.expression.function.Param;
+import org.elasticsearch.xpack.esql.plugin.QueryPragmas;
 
 import java.io.IOException;
 import java.util.List;
@@ -65,9 +66,10 @@ public class ToBoolean extends AbstractConvertFunction {
             name = "field",
             type = { "boolean", "keyword", "text", "double", "long", "unsigned_long", "integer" },
             description = "Input value. The input can be a single- or multi-valued column or an expression."
-        ) Expression field
+        ) Expression field,
+        QueryPragmas pragmas
     ) {
-        super(source, field);
+        super(source, field, pragmas);
     }
 
     private ToBoolean(StreamInput in) throws IOException {
@@ -91,12 +93,12 @@ public class ToBoolean extends AbstractConvertFunction {
 
     @Override
     public Expression replaceChildren(List<Expression> newChildren) {
-        return new ToBoolean(source(), newChildren.get(0));
+        return new ToBoolean(source(), newChildren.getFirst(), getPragmas());
     }
 
     @Override
     protected NodeInfo<? extends Expression> info() {
-        return NodeInfo.create(this, ToBoolean::new, field());
+        return NodeInfo.create(this, ToBoolean::new, field(), getPragmas());
     }
 
     @ConvertEvaluator(extraName = "FromString")
