@@ -19,6 +19,7 @@ import org.elasticsearch.xpack.esql.core.type.DataType;
 import org.elasticsearch.xpack.esql.expression.function.Example;
 import org.elasticsearch.xpack.esql.expression.function.FunctionInfo;
 import org.elasticsearch.xpack.esql.expression.function.Param;
+import org.elasticsearch.xpack.esql.plugin.QueryPragmas;
 
 import java.io.IOException;
 import java.util.List;
@@ -85,9 +86,10 @@ public class ToDouble extends AbstractConvertFunction {
                 "counter_integer",
                 "counter_long" },
             description = "Input value. The input can be a single- or multi-valued column or an expression."
-        ) Expression field
+        ) Expression field,
+        QueryPragmas pragmas
     ) {
-        super(source, field);
+        super(source, field, pragmas);
     }
 
     private ToDouble(StreamInput in) throws IOException {
@@ -111,12 +113,12 @@ public class ToDouble extends AbstractConvertFunction {
 
     @Override
     public Expression replaceChildren(List<Expression> newChildren) {
-        return new ToDouble(source(), newChildren.get(0));
+        return new ToDouble(source(), newChildren.getFirst(), getPragmas());
     }
 
     @Override
     protected NodeInfo<? extends Expression> info() {
-        return NodeInfo.create(this, ToDouble::new, field());
+        return NodeInfo.create(this, ToDouble::new, field(), getPragmas());
     }
 
     @ConvertEvaluator(extraName = "FromBoolean")
