@@ -19,6 +19,7 @@ import org.elasticsearch.xpack.esql.core.type.DataType;
 import org.elasticsearch.xpack.esql.expression.function.Example;
 import org.elasticsearch.xpack.esql.expression.function.FunctionInfo;
 import org.elasticsearch.xpack.esql.expression.function.Param;
+import org.elasticsearch.xpack.esql.plugin.QueryPragmas;
 
 import java.io.IOException;
 import java.util.List;
@@ -69,7 +70,7 @@ public class ToLong extends AbstractConvertFunction {
 
             A following header will contain the failure reason and the offending value:
 
-            `"java.lang.NumberFormatException: For input string: \"foo\""`""")
+            `"java.lang.NumberFormatException: For input string: "foo""`""")
     )
     public ToLong(
         Source source,
@@ -88,9 +89,11 @@ public class ToLong extends AbstractConvertFunction {
                 "counter_integer",
                 "counter_long" },
             description = "Input value. The input can be a single- or multi-valued column or an expression."
-        ) Expression field
+        ) Expression field,
+        QueryPragmas pragmas
+
     ) {
-        super(source, field);
+        super(source, field, pragmas);
     }
 
     private ToLong(StreamInput in) throws IOException {
@@ -114,12 +117,12 @@ public class ToLong extends AbstractConvertFunction {
 
     @Override
     public Expression replaceChildren(List<Expression> newChildren) {
-        return new ToLong(source(), newChildren.get(0));
+        return new ToLong(source(), newChildren.getFirst(), getPragmas());
     }
 
     @Override
     protected NodeInfo<? extends Expression> info() {
-        return NodeInfo.create(this, ToLong::new, field());
+        return NodeInfo.create(this, ToLong::new, field(), getPragmas());
     }
 
     @ConvertEvaluator(extraName = "FromBoolean")
