@@ -19,6 +19,7 @@ import org.elasticsearch.xpack.esql.evaluator.mapper.EvaluatorMapper;
 import org.elasticsearch.xpack.esql.expression.function.Example;
 import org.elasticsearch.xpack.esql.expression.function.FunctionInfo;
 import org.elasticsearch.xpack.esql.expression.function.Param;
+import org.elasticsearch.xpack.esql.plugin.QueryPragmas;
 
 import java.io.IOException;
 import java.util.List;
@@ -99,9 +100,10 @@ public class ToString extends AbstractConvertFunction implements EvaluatorMapper
                 "unsigned_long",
                 "version" },
             description = "Input value. The input can be a single- or multi-valued column or an expression."
-        ) Expression v
+        ) Expression v,
+        QueryPragmas pragmas
     ) {
-        super(source, v);
+        super(source, v, pragmas);
     }
 
     private ToString(StreamInput in) throws IOException {
@@ -125,12 +127,12 @@ public class ToString extends AbstractConvertFunction implements EvaluatorMapper
 
     @Override
     public Expression replaceChildren(List<Expression> newChildren) {
-        return new ToString(source(), newChildren.get(0));
+        return new ToString(source(), newChildren.getFirst(), getPragmas());
     }
 
     @Override
     protected NodeInfo<? extends Expression> info() {
-        return NodeInfo.create(this, ToString::new, field());
+        return NodeInfo.create(this, ToString::new, field(), getPragmas());
     }
 
     @ConvertEvaluator(extraName = "FromBoolean")
