@@ -21,6 +21,7 @@ import org.elasticsearch.xpack.esql.expression.function.FunctionAppliesTo;
 import org.elasticsearch.xpack.esql.expression.function.FunctionAppliesToLifecycle;
 import org.elasticsearch.xpack.esql.expression.function.FunctionInfo;
 import org.elasticsearch.xpack.esql.expression.function.Param;
+import org.elasticsearch.xpack.esql.plugin.QueryPragmas;
 
 import java.io.IOException;
 import java.util.List;
@@ -84,9 +85,10 @@ public class ToUnsignedLong extends AbstractConvertFunction {
             name = "field",
             type = { "boolean", "date", "keyword", "text", "double", "long", "unsigned_long", "integer" },
             description = "Input value. The input can be a single- or multi-valued column or an expression."
-        ) Expression field
+        ) Expression field,
+        QueryPragmas pragmas
     ) {
-        super(source, field);
+        super(source, field, pragmas);
     }
 
     private ToUnsignedLong(StreamInput in) throws IOException {
@@ -110,12 +112,12 @@ public class ToUnsignedLong extends AbstractConvertFunction {
 
     @Override
     public Expression replaceChildren(List<Expression> newChildren) {
-        return new ToUnsignedLong(source(), newChildren.get(0));
+        return new ToUnsignedLong(source(), newChildren.getFirst(), getPragmas());
     }
 
     @Override
     protected NodeInfo<? extends Expression> info() {
-        return NodeInfo.create(this, ToUnsignedLong::new, field());
+        return NodeInfo.create(this, ToUnsignedLong::new, field(), getPragmas());
     }
 
     @ConvertEvaluator(extraName = "FromBoolean")
