@@ -27,7 +27,7 @@ public class ToBooleanErrorTests extends ErrorsForCasesWithoutExamplesTestCase {
 
     @Override
     protected Expression build(Source source, List<Expression> args) {
-        return new ToBoolean(source, args.get(0));
+        return new ToBoolean(source, args.getFirst(), getPragmas());
     }
 
     @Override
