@@ -27,7 +27,7 @@ public class ToDatetimeErrorTests extends ErrorsForCasesWithoutExamplesTestCase 
 
     @Override
     protected Expression build(Source source, List<Expression> args) {
-        return new ToDatetime(source, args.get(0));
+        return new ToDatetime(source, args.getFirst(), getPragmas());
     }
 
     @Override
