@@ -95,6 +95,6 @@ public class ToDegreesTests extends AbstractScalarFunctionTestCase {
 
     @Override
     protected Expression build(Source source, List<Expression> args) {
-        return new ToDegrees(source, args.get(0));
+        return new ToDegrees(source, args.getFirst(), getPragmas());
     }
 }
