@@ -149,6 +149,6 @@ public class ToDoubleTests extends AbstractScalarFunctionTestCase {
 
     @Override
     protected Expression build(Source source, List<Expression> args) {
-        return new ToDouble(source, args.get(0));
+        return new ToDouble(source, args.getFirst(), getPragmas());
     }
 }
