@@ -71,6 +71,6 @@ public class ToGeoPointTests extends AbstractScalarFunctionTestCase {
 
     @Override
     protected Expression build(Source source, List<Expression> args) {
-        return new ToGeoPoint(source, args.get(0));
+        return new ToGeoPoint(source, args.getFirst(), getPragmas());
     }
 }
