@@ -71,6 +71,6 @@ public class ToGeoShapeTests extends AbstractScalarFunctionTestCase {
 
     @Override
     protected Expression build(Source source, List<Expression> args) {
-        return new ToGeoShape(source, args.get(0));
+        return new ToGeoShape(source, args.getFirst(), getPragmas());
     }
 }
